<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FEFBFE"
    >


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:autoSizeTextType="uniform"
        android:background="#FAFAFA"
        android:fontFamily="@font/inter_extralight"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/set_language"
        android:textColor="#636363"
        app:layout_constraintBottom_toTopOf="@+id/numberPicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:theme="@style/numberPickerCustomSize"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </NumberPicker>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/cancel_bt_3"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:background="#FF7474"
            android:fontFamily="@font/extra_light"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/CANCEL"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/save_bt_3"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:background="#636363"
            android:fontFamily="@font/extra_light"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/SAVE"
            android:textColor="#fff" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>