<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFBFE"
    tools:context=".fragment_3">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/inter_black"
            android:gravity="center|left"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="Setting"
            android:textColor="#FF7474" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/imageView_setting_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:src="@drawable/language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_setting_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/extra_light"
            android:gravity="center|left"
            android:padding="10dp"
            android:text="@string/set_language"
            android:textColor="#636363"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_setting_1"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <ImageView
            android:id="@+id/imageView_setting_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:src="@drawable/pri"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_setting_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/extra_light"
            android:gravity="center|left"
            android:padding="10dp"
            android:text="@string/privacy_policy"
            android:textColor="#636363"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_setting_3"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <ImageView
            android:id="@+id/imageView_setting_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingVertical="10dp"
            android:paddingStart="10dp"
            android:src="@drawable/ver"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_setting_4_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/extra_light"
            android:gravity="center|left"
            android:textColor="#636363"
            android:padding="10dp"
            android:text="@string/version"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_setting_4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_setting_4_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/extra_light"
            android:gravity="center|right"
            android:padding="10dp"
            android:textColor="#636363"
            android:text="1.0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>